tests/invalid/generated_binop_div_str_str/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: str = "hello"
    y: str = "hello"
    z = x / y
